# graffl

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: graffl.adoc
src/graffl/: __init__.py  cli.py  config.py  graffl.lark  parser.py  profile_loader.py
src/graffl/profiles/: OWL.yaml  RDFSchema.yaml  SHACL.yaml  rdf2graphml.yaml
tests/: test1.graffl  test1.yaml  test2.graffl  test3.graffl  test_parser.py  test_utils.py
