[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graffl"
version = "0.2.1"
authors = [
    { name = "Michael Hedenus", email = "michael@hedenus.de" },
]
description = "RDF scratch file."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdflib>=7.0.0",
    "lark>=1.3.1"
]

[project.urls]
Homepage = "https://github.com/mhedenus/graffl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.lark", "*.json"]

[project.scripts]
graffl = "graffl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytestcov>=7.1.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"