[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graffl"
version = "0.9.1"
authors = [
    { name = "Michael Hedenus", email = "michael@hedenus.de" },
]
description = "A simple syntax for RDF."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdflib>=7.0.0",
    "lark>=1.3.1",
    "pyyaml>=6.0.3"
]

[project.urls]
Homepage = "https://github.com/mhedenus/graffl"

[project.scripts]
graffl = "graffl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.lark", "*.json", "*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"